--- a/fimco/fimcosite/templates/advisory.html
+++ b/fimco/fimcosite/templates/advisory.html
@@ -14,17 +14,22 @@
                         <h2>Advisory</h2>
                     </div>
                     <p>
-                        Across all these services we partner firmly with the client and give them a unique vantage point
-                        of their transactions in a way that will help them save time, energy and costs that may otherwise
-                        accrue (silently) from going it alone from the go.
+                        We offer our expertise and insights to guide our clients through their capital market transactions
+                        such as IPO, Debt issuance and others.
                     </p>
                     <p>
-                        We also assist the banks we work with to receive transactions and proposals that are palatable
-                        to them, and reduce the amount of time and resources that banks must expend before arriving at
-                        the decision of whether or not they should do certain transactions.
+                        We leverage best practices throughout the globe in executing this service at times forming
+                        strategic partnerships to help deliver superior experience to our clients.
                     </p>
                     <p>
-                        <a href="{% url 'site' 'contact' %}">Contact us</a> to explore how we can help your business.
+                        Our local footprint allows us to serve the diverse needs of our clients in Tanzania.
+                        Our ability to deliver is enhanced by our in-depth understanding of risks and markets to inform
+                        the unique financial, risk management and regulatory demands that clients face. We undertake a
+                        wide range of both strategic and tactical engagements to ensure that our clients achieve their
+                        targeted goals.
+                    </p>
+                    <p>
+                        <a href="{% url 'site' 'contact' %}">Contact us</a> for more information on how best we can advise you.
                     </p>
                 </div>
                 <!-- /LEFT -->
@@ -33,28 +38,27 @@
                 <div class="col-md-3">
                     <div class="box-static box-border-top mb-60">
                         <div class="box-title">
-                            <h4>Our process</h4>
+                            <h4>We focus on</h4>
                         </div>
                         <ul class="list-unstyled list-icons p-15 pb-0">
                             <li class="mb-20">
                                 <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Register open CSD</span>
-                                <small>Must have a CSD, we will easily get you one.</small>
+                                <span class="block fs-15">
+                                    Providing financial markets expertise across various asset
+                                    classes available in our markets.
+                                </span>
                             </li>
                             <li class="mb-20">
                                 <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Initiate transactions</span>
-                                <small>Tell us how much you’re looking to invest and we shall tell you how!</small>
+                                <span class="block fs-15">
+                                    Providing guidance on the various regulations and market practices.
+                                </span>
                             </li>
                             <li class="mb-20">
                                 <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Fund Transfer</span>
-                                <small>Transfer cash to our investment trust account and let us handle the rest</small>
-                            </li>
-                            <li class="mb-20">
-                                <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Settlement</span>
-                                <small>Shares credited to CSD and funds settled</small>
+                                <span class="block fs-15">
+                                    Understanding clients’ requirements and tailoring advisory framework that addresses underlying needs.
+                                </span>
                             </li>
                         </ul>
                         <hr />
