--- a/fimco/fimcosite/templates/advisory.html
+++ b/fimco/fimcosite/templates/advisory.html
@@ -18,8 +18,8 @@
                         such as IPO, Debt issuance and others.
                     </p>
                     <p>
-                        We leverage best practices throughout the globe in executing this service at times forming
-                        strategic partnerships to help deliver superior experience to our clients.
+                        We leverage best practices in executing this service at times forming strategic partnerships to
+                        help deliver superior experience to our clients.
                     </p>
                     <p>
                         Our local footprint allows us to serve the diverse needs of our clients in Tanzania.
