--- a/fimco/fimcosite/templates/advisory.html
+++ b/fimco/fimcosite/templates/advisory.html
@@ -10,7 +10,8 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/Advisory.png" height="250" width="250" alt="" />
+                    <img class="float-left" src="/static/img/Advisory.png" height="240" width="215" alt="54%" />
+{#                    250px*224px#}
                     <div class="heading-title">
                         <h2>Advisory</h2>
                     </div>
