--- a/fimco/fimcosite/templates/advisory.html
+++ b/fimco/fimcosite/templates/advisory.html
@@ -10,8 +10,8 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/Advisory.png" height="240" width="215" alt="54%" />
-{#                    250px*224px#}
+                    <img class="hidden-xs-down float-left" src="/static/img/Advisory.png" height="240" width="215" alt="54%" />
+                    <img class="hidden-sm-up float-left" src="/static/img/Advisory.png" height="106" width="95" alt="" />
                     <div class="heading-title">
                         <h2>Advisory</h2>
                     </div>
